--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,17 @@
-markdown: redcarpet
-highlighter: null
-permalink: /:title
+title: Brume # your awesome site title goes here
+email: you@example.com # your email address goes here
+description: > # describe your site; keep it brief-ish.
+  Brume is simple. It's easy to use. It's a Jekyll theme.
+github_username: username # you'll have to enter your GitHub username on this and the next line
+url: http://username.github.io/ # replace "username" with your github username
+baseurl: # thesubpath of your site, e.g. /blog/; you should probably leave this blank
 
-url:
-baseurl:
-
-redcarpet:
-  extensions: [strikethrough, tables]
+# build settings
+markdown: kramdown
+highlighter: rouge
+permalink:  /blog/:year-:month-:day/:title.html
+kramdown:
+  input: GFM
 
 sass:
   sass_dir: public/css
