--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,15 @@
-title: Brume # your awesome site title goes here
-email: you@example.com # your email address goes here
-description: > # describe your site; keep it brief-ish.
+########################### EDIT YOUR SETTINGS HERE
+# Site settings
+title: Brume # give your site a title
+email: you@example.com # put your email address in here; optional
+# edit your site description; keep it brief
+description: > # this just means to ignore newlines until "baseurl:"
   Brume is simple. It's easy to use. It's a Jekyll theme.
-github_username: username # you'll have to enter your GitHub username on this and the next line
-url: http://username.github.io/ # replace "username" with your github username
-baseurl: # thesubpath of your site, e.g. /blog/; you should probably leave this blank
+baseurl:  # the subpath of your site, e.g. /blog/; if unsure, leave this blank
+url: http://[username].github.io # replace [username] with your github username (no brackets)
+github_username: github_username # replace with your github username
 
+########################## DO NOT EDIT BELOW HERE UNLESS YOU'RE STOKED TO HACK
 # build settings
 markdown: kramdown
 highlighter: rouge
