--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
 ########################### EDIT YOUR SETTINGS HERE
 # Site settings
-title: Brume # give your site a title
-email: you@example.com # put your email address in here; optional
+title: "Brume" # give your site a title
+email: "you@example.com" # put your email address in here; optional
 # edit your site description; keep it brief
-description: > # this just means to ignore newlines until "baseurl:"
-  Brume is simple. It's easy to use. It's a Jekyll theme.
-baseurl:  # the subpath of your site, e.g. /blog/; if unsure, leave this blank
+description: "Brume is simple. It's easy to use. It's a Jekyll theme."
 url: http://[username].github.io # replace [username] with your github username (no brackets)
 github_username: github_username # replace with your github username
 
