--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ########################### EDIT YOUR SETTINGS HERE
 # Site settings
 
-title: Noah McMullen's Cool New Theory/Practice Blog # give your site a title
+title: Noah McMullen's Cool Blog # give your site a title
 email: noahmcmlln@gmail.com # put your email address in here; optional
 # edit your site description; keep it brief
 description: scared of code and learning to deal with it
