Pygments to Rouge.
Change Pygments to Rouge as highlighter to fix page build warning after
GitHub pages update.

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_username: github_username # replace with your github username
 # build settings
 markdown: kramdown
 # highlighter: rouge # for local testing
-highlighter: pygments # for deployment to github pages
+highlighter: rouge
 permalink:  /blog/:year-:month-:day/:title.html
 kramdown:
   input: GFM
